# logcollector

./: Makefile.am  README  boot.sh  configure.ac
config/: config.conf  fortigate.cfg  regex.cfg  regex.txt  regex2.txt
plugin/: citrix.plugin  fortigate.plugin  fortigate1.plugin  fortigate2.plugin  fortigate3.plugin  fortigate4.plugin  fortigate_copy.plugin  paloalto.plugin  plugin.plugin
src/: Makefile.am  cfg.c  cfg.h  common.h  config-handlers.c  config-handlers.h  custom_functions.c  custom_functions.h  defines.h  dynamic-string.c  dynamic-string.h  getuuidkey.c  hash.c  hash.h  hmap.c  hmap.h  json.c  json.h  logcollector.c  logcollector_trial.c  net.c  ring.c  ring.h  ring_c11_mem.h  shash.c  shash.h  timeval.h  unicode.h  util.c  util.h
tools/: key_generator  key_generator.c  logc_cronjobs.py  logc_executor.py  logcollector.service  one_udp_sender.py  udp_send_one.py  udp_sender  udp_sender.c  udp_sender.py  udp_sender_246.py
